--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 macroquad = "0.3.3"
 tungstenite = '0.13.0'
 url = '2.2.2'
+serde = {version = "1.0.126", features = ["derive"]}
+serde_json = "1.0"
+structopt = "0.3.21"
