--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2018"
 
 [dependencies]
 macroquad = "0.3.3"
-tungstenite = '0.13.0'
 url = '2.2.2'
 serde = {version = "1.0.126", features = ["derive"]}
 serde_json = "1.0"
 structopt = "0.3.21"
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tungstenite = '0.13.0'
