--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install package dependencies
       run: sudo apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev
-    - name: Build
+    - name: Build for target x86_64-unknown-linux-gnu
       working-directory: ./client
-      run: cargo build --verbose
+      run: cargo build
+    - name: Run clippy for target x86_64-unknown-linux-gnu
+      working-directory: ./client
+      run: cargo build
     - name: Run tests
       working-directory: ./client
-      run: cargo test --verbose
+      run: cargo test
+    - name: Add wasm32-unknown-unknown target
+      run: rustup target add wasm32-unknown-unknown
+    - name: Build for target wasm32-unknown-unknown
+      working-directory: ./client
+      run: cargo build --target wasm32-unknown-unknown
