--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,5 +12,7 @@ url = '2.2.2'
 serde = {version = "1.0.126", features = ["derive"]}
 serde_json = "1.0"
 structopt = "0.3.21"
+log = "0.4.14"
+simple_logger = "1.11.0"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tungstenite = '0.13.0'
