--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,14 +16,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+
     - name: Build server with Maven
       working-directory: ./server
-      run: mvn -B package --file pom.xml
+      run: mvn package -Dquarkus.package.type=uber-jar
+
     - name: Build worker with Maven
       working-directory: ./worker
-      run: mvn -B package --file pom.xml
+      run: mvn package -Dquarkus.package.type=uber-jar
+
+    - name: Prepare produced files
+      run: |
+        mkdir -p planetoid-server planetoid-worker
+        cp server/target/planetoid-server-1.0.0-SNAPSHOT-runner.jar planetoid-server
+        cp worker/target/planetoid-worker-1.0.0-SNAPSHOT-runner.jar planetoid-worker
+        tar zcvvf planetoid-server.tar.gz planetoid-server
+        tar zcvvf planetoid-worker.tar.gz planetoid-worker
+
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      name: Create a Github draft release
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: srvlatest
+        title: Planetoid server and worker
+        files: |
+          planetoid-server.tar.gz
+          planetoid-worker.tar.gz
