--- a/.github/workflows/rust-win.yml
+++ b/.github/workflows/rust-win.yml
@@ -24,3 +24,19 @@ jobs:
     - name: Run tests
       working-directory: ./client
       run: cargo test
+
+    - name: Prepare produced files
+      run: |
+        new-item -Name planetoid-windows -ItemType directory
+        Copy-Item -Path "client\target\debug\planetoid.exe" -Destination "planetoid-windows"
+        Copy-Item -Path "client\sounds" -Destination "planetoid-windows" -Recurse
+        Compress-Archive -Path planetoid-windows -DestinationPath planetoid-windows.zip
+
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      name: Create a Github draft release
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: winlatest
+        title: Planetoid client Windows
+        files: |
+          planetoid-windows.zip
