--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,11 @@ updates:
     directory: "/server" # Location of package manifests
     schedule:
       interval: "weekly"
+
+  - package-ecosystem: "maven" # See documentation for possible values
+    directory: "/worker" # Location of package manifests
+    schedule:
+      interval: "weekly"
       
   - package-ecosystem: "cargo" # See documentation for possible values
     directory: "/client" # Location of package manifests
