ci: Uppercase windows
- Change from windows to Windows in ci job title.

--- a/.github/workflows/planetoid.yml
+++ b/.github/workflows/planetoid.yml
@@ -121,7 +121,7 @@ jobs:
 
 
   build_client_windows:
-    name: Build client windows
+    name: Build client Windows
     runs-on: windows-latest
 
     steps:
