--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.datasource.devservices=true
 quarkus.datasource.devservices.image-name=postgres:13.2
+
+quarkus.http.cors=true
