--- a/.github/workflows/planetoid.yml
+++ b/.github/workflows/planetoid.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install package dependencies
-      run: sudo apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev
+      run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev
 
     - name: Build for target x86_64-unknown-linux-gnu
       working-directory: ./client
