--- a/.github/workflows/planetoid.yml
+++ b/.github/workflows/planetoid.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install package dependencies
       run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev
 
+    - name: Test docker
+      run: docker --version
+
     - name: Build for target x86_64-unknown-linux-gnu
       working-directory: ./client
       run: cargo build
