ci: Push image to registry
- Push image to registry.

--- a/.github/workflows/planetoid.yml
+++ b/.github/workflows/planetoid.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install package dependencies
       run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev
 
-    - name: Test docker
+    - name: Test docker version
       run: docker --version
 
     - name: Build for target x86_64-unknown-linux-gnu
@@ -71,6 +71,23 @@ jobs:
         path: planetoid-wasm.tar.gz
         retention-days: 1
 
+    - name: 'Login to Docker registry'
+      env:
+        registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      run: echo "$registry_password" | docker login -u uggla --password-stdin
+
+    - name: 'Build Docker image'
+      working-directory: ./client
+      run: docker build -t planetoid .
+
+    - name: 'Tag Docker image'
+      working-directory: ./client
+      run: docker tag planetoid:latest uggla/planetoid:latest
+
+    - name: 'Push Docker image to registry'
+      run: docker push uggla/planetoid
+
+
   build_client_macos:
     name: Build clients MacOS
     runs-on: macos-latest
@@ -100,6 +117,7 @@ jobs:
         path: planetoid-macos-x86_64.tar.gz
         retention-days: 1
 
+
   build_client_windows:
     name: Build client windows
     runs-on: windows-latest
@@ -128,6 +146,7 @@ jobs:
         name: planetoid-windows.zip
         path: planetoid-windows.zip
         retention-days: 1
+
 
   build_maven:
     name: Build server and worker
@@ -171,6 +190,7 @@ jobs:
         name: planetoid-worker.tar.gz
         path: planetoid-worker.tar.gz
         retention-days: 1
+
 
   create_github_release:
     name: Create Github release
